tests/snapshots/nomination_api_test__account_not_found.snap
---
source: tests/nomination_api_test.rs
expression: res.text().await
---
"{\"status\":\"Error\",\"payload\":{\"Error\":{\"error_message\":\"Error account not found for account: does_not_exist\"}}}"

