tests/snapshots/nomination_api_test__create_nomination_when_guardian_does_not_exists_and_clutch_user_does_not_exist.snap
---
source: tests/nomination_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    nomination_id: "[uuid]"

