tests/snapshots/nomination_api_test__error_on_delete_nomination_if_status_is_accepted_or_rejected.snap
---
source: tests/nomination_api_test.rs
expression: json_response
---
status: Error
payload:
  Error:
    error_message: "Nomination can't be deleted with state: ACCEPTED, must be in state PENDING"

