tests/snapshots/nomination_api_test__find_all_by_email.snap
---
source: tests/nomination_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    nominations:
      - id: "[uuid]"
        email: guardian3@example.com
        guardian_id: guardian_id3
        account_id: "[uuid]"
        status: REJECTED

