tests/snapshots/nomination_api_test__find_all_nominations.snap
---
source: tests/nomination_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    nominations:
      - id: "[uuid]"
        email: guardian@example.com
        guardian_id: guardian_id
        account_id: "[uuid]"
        status: PENDING

