tests/snapshots/nomination_api_test__invalid_email_format.snap
---
source: tests/nomination_api_test.rs
expression: res.text().await
---
"{\"status\":\"Error\",\"payload\":{\"Error\":{\"error_message\":\"Invalid email format a\"}}}"

